RESOLVED FIXED 80491
[EFL] Key press event is not processed properly.
https://bugs.webkit.org/show_bug.cgi?id=80491
Summary [EFL] Key press event is not processed properly.
ChangSeok Oh
Reported 2012-03-06 22:29:30 PST
This issue is related with mutation-observer feature. If I press enter key, then a keyboard event for "Enter key" should be processed and reach to the mutation observer, but it doesn't.
Attachments
Patch (6.02 KB, patch)
2012-03-07 02:58 PST, ChangSeok Oh
no flags
Patch (4.58 KB, patch)
2012-03-07 06:43 PST, ChangSeok Oh
no flags
ChangSeok Oh
Comment 1 2012-03-07 02:58:20 PST
Gyuyoung Kim
Comment 2 2012-03-07 04:56:46 PST
Comment on attachment 130583 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=130583&action=review It looks that you modify nits of EflKeyboardUtilities | PlatformKeyboardEventEfl as well as add singleCharacterString(). I think this is not match for ChangeLog. I think it is better to split this patch into two patches. > Source/WebCore/ChangeLog:17 > + fast/mutation/end-of-task-delivery.html Trivial nit : Missing "Test:" in front of test case.
ChangSeok Oh
Comment 3 2012-03-07 06:43:24 PST
ChangSeok Oh
Comment 4 2012-03-07 06:51:07 PST
Comment on attachment 130583 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=130583&action=review Thanks for comment. I'll deal with remained changes in bug80511. >> Source/WebCore/ChangeLog:17 >> + fast/mutation/end-of-task-delivery.html > > Trivial nit : Missing "Test:" in front of test case. Done.
Gustavo Noronha (kov)
Comment 5 2012-03-07 07:26:58 PST
Comment on attachment 130615 [details] Patch OK, looks sensible
WebKit Review Bot
Comment 6 2012-03-07 09:15:22 PST
Comment on attachment 130615 [details] Patch Clearing flags on attachment: 130615 Committed r110061: <http://trac.webkit.org/changeset/110061>
WebKit Review Bot
Comment 7 2012-03-07 09:15:27 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.