[EFL] Key press event is not processed properly. https://bugs.webkit.org/show_bug.cgi?id=80491

Patch by ChangSeok Oh <shivamidow@gmail.com> on 2012-03-07
Reviewed by Gustavo Noronha Silva.

This issue is related with mutation observer feature.
If enter key is pressed, then a keyboard event should be processed
and reach to the mutation observer, but it doesn't.
Some special keys like Enter, Backspace and Tab key should be processed
and change to a single character code, but EFL port hasn't handled like that.

At least we can verify this with following two tests as I know. but they require another
functionality for bug79601. I'm going to submit the patch for it after this one.

Test: fast/mutation/end-of-task-delivery.html
      fast/mutation/inline-event-listener.html

* platform/efl/EflKeyboardUtilities.cpp:
(WebCore::singleCharacterString):
(WebCore):
* platform/efl/EflKeyboardUtilities.h:
(WebCore):
* platform/efl/PlatformKeyboardEventEfl.cpp:
(WebCore::PlatformKeyboardEvent::PlatformKeyboardEvent):

Canonical link: https://commits.webkit.org/97678@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@110061 268f45cc-cd09-0410-ab3c-d52691b4dbfc